feat (#45): implementa tratamento de exceção para todos os services, utilizando GlobalExceptionHandler.