@@ -2,17 +2,20 @@ package com.neohorizon.api.service;
 
 import com.neohorizon.api.dto.DimPeriodoDTO;
 import com.neohorizon.api.entity.DimPeriodo;
+import com.neohorizon.api.exception.EntityNotFoundException;
+import com.neohorizon.api.exception.BusinessException;
 import com.neohorizon.api.repository.DimPeriodoRepository;
+import com.neohorizon.api.utils.ValidationUtils;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class DimPeriodoService {
 
+    private static final String ENTITY_NAME = "DimPeriodo";
     private final DimPeriodoRepository dimPeriodoRepository;
 
     @Autowired
@@ -24,24 +27,33 @@ public class DimPeriodoService {
         return dimPeriodoRepository.findAll()
                 .stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public DimPeriodoDTO findById(Long id) {
+        ValidationUtils.requireValidId(id, ENTITY_NAME);
+        
         return dimPeriodoRepository.findById(id)
                 .map(this::convertToDTO)
-                .orElse(null);
+                .orElseThrow(() -> EntityNotFoundException.forId(ENTITY_NAME, id));
     }
 
     public DimPeriodoDTO save(DimPeriodoDTO dimPeriodoDTO) {
+        ValidationUtils.requireNonNull(dimPeriodoDTO, ENTITY_NAME + " é obrigatório");
+        validateDimPeriodoDTO(dimPeriodoDTO);
+        
         DimPeriodo dimPeriodo = convertToEntity(dimPeriodoDTO);
         DimPeriodo savedEntity = dimPeriodoRepository.save(dimPeriodo);
         return convertToDTO(savedEntity);
     }
 
     public DimPeriodoDTO update(Long id, DimPeriodoDTO dimPeriodoDTO) {
+        ValidationUtils.requireValidId(id, ENTITY_NAME);
+        ValidationUtils.requireNonNull(dimPeriodoDTO, ENTITY_NAME + " é obrigatório para atualização");
+        validateDimPeriodoDTO(dimPeriodoDTO);
+        
         DimPeriodo existingEntity = dimPeriodoRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("DimPeriodo with ID " + id + " not found."));
+                .orElseThrow(() -> EntityNotFoundException.forId(ENTITY_NAME, id));
 
         existingEntity.setDia(dimPeriodoDTO.getDia());
         existingEntity.setSemana(dimPeriodoDTO.getSemana());
@@ -53,7 +65,25 @@ public class DimPeriodoService {
     }
 
     public void deleteById(Long id) {
-        dimPeriodoRepository.deleteById(id);
+        ValidationUtils.requireValidId(id, ENTITY_NAME);
+        
+        if (!dimPeriodoRepository.existsById(id)) {
+            throw EntityNotFoundException.forId(ENTITY_NAME, id);
+        }
+        
+        try {
+            dimPeriodoRepository.deleteById(id);
+        } catch (Exception e) {
+            throw new BusinessException("Erro ao deletar " + ENTITY_NAME + ": " + e.getMessage(), e);
+        }
+    }
+
+    private void validateDimPeriodoDTO(DimPeriodoDTO dto) {
+        ValidationUtils.require(dto.getAno() != null && dto.getAno() > 0, "Ano é obrigatório e deve ser positivo");
+        ValidationUtils.require(dto.getMes() != null && dto.getMes() >= 1 && dto.getMes() <= 12, 
+            "Mês deve estar entre 1 e 12");
+        ValidationUtils.require(dto.getDia() != null && dto.getDia() >= 1 && dto.getDia() <= 31, 
+            "Dia deve estar entre 1 e 31");
     }
 
     private DimPeriodoDTO convertToDTO(DimPeriodo entity) {
